--- a/smart_dam/src/dam_mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/smart_dam/src/dam_mobileapp/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/stateLabel"
 
         app:layout_constraintVertical_bias="0.02"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:text="@string/placeholder"/>
 
     <TextView
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/state"
+        app:layout_constraintTop_toBottomOf="@+id/water"
         app:layout_constraintVertical_bias="0.02" />
 
     <TextView
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/levelLabel"
 
         app:layout_constraintVertical_bias="0.02"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:text="@string/placeholder"/>
 
     <TextView
@@ -99,7 +99,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/level"
+        app:layout_constraintTop_toBottomOf="@+id/state"
         app:layout_constraintVertical_bias="0.02" />
 
     <TextView
@@ -114,19 +114,25 @@
         app:layout_constraintTop_toBottomOf="@+id/waterLabel"
 
         app:layout_constraintVertical_bias="0.02"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:text="@string/placeholder"/>
 
     <Switch
         android:id="@+id/contextSwitch"
         android:layout_width="286dp"
         android:layout_height="53dp"
-        android:text="Modalità Manuale"
-        android:textSize="25dp"
+
+        android:text="@string/mode"
+        android:textOff="@string/auto_mode"
+        android:textOn="@string/manual_mode"
+        android:textSize="25sp"
+
+        android:onClick="switchControlMode"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.5"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 </androidx.constraintlayout.widget.ConstraintLayout>
