--- a/smart_dam/src/dam_mobileapp/app/src/main/res/values/colors.xml
+++ b/smart_dam/src/dam_mobileapp/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="enabled">#5c5c5c</color>
     <color name="disabled">#FF03DAC5</color>
+    <color name="water">#0080ff</color>
 </resources>
