DM refactor, setModel() in DC to process json from DC, fixed bt msg set in DC

--- a/smart_dam/src/dam_mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/smart_dam/src/dam_mobileapp/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
         android:id="@+id/levelLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/levelLabel"
+        android:text="@string/damOpeningLabel"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -120,13 +120,13 @@
 
     <Switch
         android:id="@+id/contextSwitch"
-        android:layout_width="286dp"
+        android:layout_width="200dp"
         android:layout_height="53dp"
 
-        android:text="@string/mode"
-        android:textSize="25sp"
-
         android:checked="false"
+        android:text="@string/mode"
+
+        android:textSize="25sp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
